added redirect, dumped lato font

--- a/server/uwsgi.ini
+++ b/server/uwsgi.ini
@@ -13,13 +13,13 @@ socket      = /tmp/uwsgi_blog.sock
 chmod-socket    = 666
 
 #project base directory
-chdir       = /opt/azh-env/aidianholder.com
+chdir       = /opt/aidianholder.com-env/aidianholder.com
 
 #module style identifier for Django projects wsgi file
 module      = azh.wsgi
 
 #path to project virtualenv
-home        = /opt/azh-env
+home        = /opt/aidianholder.com-env
 
 #clear environment on uwsgi exit
 vacuum      = true
