changes from deployment env

--- a/server/uwsgi.ini
+++ b/server/uwsgi.ini
@@ -23,3 +23,6 @@ home        = /opt/aidianholder.com-env
 
 #clear environment on uwsgi exit
 vacuum      = true
+
+#assigns pid to  master process, hook for management
+pidfile	    =/tmp/uwsgi_master_pidfile.pid
